# Just_for_test_and_try

./: .gitignore  README.md  Untitled Diagram.xml  未命名绘图.drawio
http_server.1.0.0/: README.md
http_server.1.0.0/conf/: http.conf
http_server.1.0.0/depend/epoll/: Makefile  epoll_event_poller.cpp  socket_content.cpp
http_server.1.0.0/depend/util/: util.cpp
http_server.1.0.0/src/: Makefile  http_conf.cpp  main.cpp  task_queue.h
http_server.1.1.0/: README.md
http_server.1.1.0/conf/: ftype.conf  http.conf
http_server.1.1.0/depend/config/: Makefile
http_server.1.1.0/depend/epoll/: Makefile  communicate.h  event_poller.h  socket.cpp
http_server.1.1.0/depend/taskqueue/: Makefile
http_server.1.1.0/depend/thread/: Makefile
http_server.1.1.0/depend/util/: Makefile  util.cpp
http_server.1.1.0/extern_include/: taskqueue.h
http_server.1.1.0/script/: make_all.sh  make_clean.sh  start.sh  stop.sh
http_server.1.1.0/src/: Makefile  cgi.cpp  cgi.h  http_conf.cpp  http_conf.h  http_server.cpp  http_server.h  http_socket_handler.cpp  http_socket_handler.h  http_work_flow.cpp  http_work_flow.h  main.cpp  response.cpp  response.h
http_server.1.1.0/src/www/: default.html  index.html  index.php
http_server.1.1.0/src/www/tmp/: 1407851256.html
single_fs/: .gitignore  compile.sh
single_fs/app/: Makefile  Makefile.am  Makefile.in  client.cpp  client.h  client_handler.h  common.h  configure.in  inited_ifs.h  main.cpp  make  meta_storage.idx  server.cpp  server_handler.cpp  server_handler.h
single_fs/chat/: Makefile.am  chat_process.cpp  chat_process.h  client.cpp  client.h  client_handler.h  client_main.cpp  common.h  configure.in  main.cpp  make  protocol  server.cpp  server.h  server_handler.cpp  server_handler.h  task_node.h  user_connection.cpp  user_connection.h
single_fs/depends/fs/: Makefile.am  Makefile.in  clean_make  configure.in  file_utils.cpp  file_utils.cpp.r  file_utils.h  file_utils.h.r  ifs.cpp  libtool  main.cpp  make  meta_storage.idx
single_fs/depends/net/: Makefile  Makefile.am  Makefile.in  README  client.cpp  communicate_loop.cpp  configure.in  cthread_mutex.cpp  libtool  listen_handler.cpp  listen_handler.h  make  net_handler.h  net_machine.cpp  net_machine.h  package.cpp  packet.h  stream_handler.h  stream_socket_context.cpp  stream_socket_context.h
single_fs/depends/net.v1/: Makefile  Makefile.am  README  communicate_loop.h  configure.in  listen_handler.cpp  listen_handler.h  listen_socket_context.cpp  make  net_handler.h  net_machine.cpp  package.h  stream_socket_context.cpp  stream_socket_context.h  task_queue.h
single_fs/depends/net.v1/test/: Makefile.am  Makefile.in  client.cpp  configure.in  server_handler.cpp  server_handler.h  server_main.cpp
single_fs/depends/net/test/: Makefile.am  client.cpp  client_handler.h  server_handler.cpp
single_fs/depends/type/: circle_queue.h  circle_queue_test.cpp
single_fs/depends/utils/: Makefile.am  configure.in  example.am  log.cpp  log_test.cpp  make  time_utils.cpp  time_utils.h  time_utils_test.cpp
single_fs/include/: circle_queue.h  ifs.h  log.h  packet.h  stream_socket_context.h
single_fs/librsync/: Makefile.am  basesum.h  checksum.cpp  checksum.h  checksum1.h  checksum2.cpp  checksum2.h  checksum3.cpp  checksum3.h  common.h  configure.in  file_map.cpp  file_map.h  file_tool.cpp  make  rdiff.cpp  rsync_core.cpp  rsync_core.h  run_rdiff.sh  scan_machine.h  write_file_map.cpp  write_file_map.h
single_fs/simple_rsync/: Makefile.am  Makefile.in  analyse  basesum.h  checksum.cpp  checksum.h  checksum1.cpp  checksum2.cpp  checksum2.h  checksum3.h  client.cpp  client.h  client_handler.h  common.h  configure.in  cp.cpp  file_map.cpp  main.cpp  protocol  rsync_service.cpp  rsync_service.h  scan.cpp  server.cpp  server.h  server_handler.cpp  server_handler.h  server_processor.cpp  server_processor.h  sum_machine.h  task_node.h  test.cpp
test_http_server/: README.md
test_http_server/conf/: http.conf
test_http_server/depend/config/: Makefile  config.cpp  config.h
test_http_server/depend/epoll/: Makefile  communicate.cpp  communicate.h  epoll_event_poller.cpp  epoll_event_poller.h  event_poller.h  listen_handler.cpp  listen_handler.h  make.sh  package.cpp  package.h  socket.cpp  socket.h  socket_content.cpp  socket_content.h  socket_handler.h  transmission.cpp  transmission.h
test_http_server/depend/makedir/: link.sh
test_http_server/depend/taskqueue/: Makefile
test_http_server/depend/thread/: Makefile  Work_flow.cpp
test_http_server/depend/util/: Makefile  util.cpp  util.h
test_http_server/extern_include/: config.h  epoll_event_poller.h  taskqueue.h
test_http_server/script/: make.sh  make_all.sh
test_http_server/src/: Makefile  cgi.h  http_conf.cpp  http_conf.h  http_server.cpp  http_server.h  http_socket_handler.cpp  http_socket_handler.h  http_work_flow.cpp  http_work_flow.h  main.cpp  response.cpp  response.h  task_queue.cpp
test_http_server/src/www/: default.html  test.php
test_http_server/src/www/tmp/: 1407850861.html
test_http_server/thread/: Makefile
test_socket/: test.cpp
