#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
#AC_CONFIG_SRCDIR([client.cpp])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
CXXFLAGS="-std=c++0x"

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdint.h unistd.h])
AC_CHECK_HEADERS([sys/time.h])
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([unordered_map])
AC_CHECK_FUNCS([memset])
AC_CHECK_FUNCS([memmove])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_UINT32_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_PROG_LN_S
AC_PROG_RANLIB
AC_C_INLINE

# Checks for library functions.

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT([Makefile])
