AUTOMAKE_OPTIONS= foreign
bin_PROGRAMS= client server# main
INCLUDES=-I../../../include/
LDADD=../../../lib/libnetmachine.a ../../../lib/libutils.a
client_SOURCES= client.cpp #client_handler.cpp
server_SOURCES= server_main.cpp server_handler.cpp#client_handler.cpp#server_handler.cpp #file_utils.cpp
#server_LDADD=../lib/libnetmachine.a ../lib/libifs.a
